
[tool.poetry]
name = "dhcpy"
version = "0.1.0"
description = "DHCP Server"
authors = ["Yurzs <yurzs@yurzs.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.black]
line_length = 100

[tool.pylint]
target_versions = ["py37", "py38", "py39", "py310"]
max-line-length = 100
